<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.info.InfoFacialExpressionActionFragment">

    <LinearLayout
        android:id="@+id/nameBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_very_large"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:elevation="5dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/metropolis"
            android:gravity="center_horizontal"
            android:text="@string/feraction_insert_name"
            android:textSize="@dimen/P4_text_size"
            android:layout_marginBottom="@dimen/default_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/facialExpressionNewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin_large_plus"
            android:maxLines="1"
            android:text=""
            android:inputType="textPersonName"
            android:gravity="center_horizontal"
            android:textSize="@dimen/P4_text_size"
            android:fontFamily="@font/metropolis"
            android:importantForAutofill="no" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/nameBox"
        app:layout_constraintBottom_toTopOf="@+id/buttonsBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/facialExpressionPreview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintHeight_default="percent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/feraction_facial_expression_preview_content_description"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <com.ortiz.touchview.TouchImageView
        android:id="@+id/zoomedFramePreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:background="@color/black"
        android:visibility="gone"
        android:elevation="5dp"
        android:backgroundTint="@color/black_semitransparent"
        android:contentDescription="@string/feraction_frame_content_description"
        tools:src="@tools:sample/avatars" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/buttonsBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/default_margin_small_plus"
        android:layout_marginBottom="@dimen/default_margin_large"
        >

        <include
            android:id="@+id/facialExpressionRecordAgain"
            layout="@layout/action_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/default_margin_small"
            app:text="@{@string/actiondetails_record_again}"
            app:border="@{@drawable/red_button_border}"
            />

        <include
            android:id="@+id/facialExpressionSave"
            layout="@layout/action_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/default_margin_small"
            app:text="@{@string/actiondetails_save_configuration}"
            app:border="@{@drawable/red_button_border}"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>